--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
   <script type="text/javascript">
     document.addEventListener("adobe_dc_view_sdk.ready", function () {
       var adobeDCView = new AdobeDC.View({
-        clientId: 2213fee90bd24204aad81d2435c307cf,
+        clientId: "2213fee90bd24204aad81d2435c307cf",
         divId: "adobe-dc-view"
       });
       adobeDCView.previewFile({
-        content: { location: { url: "form.pdf" } },
-        metaData: { fileName: "form.pdf" }
+        content: { location: { url: "freelance_contract_cleaned.pdf" } },
+        metaData: { fileName: "freelnce_contract_cleaned.pdf" }
       }, {
         embedMode: "FULL_WINDOW"
       });
